# ua-cg-engine

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  bench.sh  callgrind.sh  callgrind_all.sh  debug.sh  feh.sh  flamegraph.sh  gdb-opt.sh  gdb.sh  mkcubemap.sh  run.sh
assets/: README  ambulance.mtl  cubemap001.ini  cubemap002.ini  cubemap003.ini  cubemap004.ini  cubemap005.ini  cubemap006.ini  cubemap007.ini  cubemap008.ini  cubemap010.ini  cubemap011.ini  cubemap012.ini  cubemap013.ini  extreme_specular.ini  smooth001.ini  smooth002.ini  smooth003.ini  smooth004.ini  smooth005.ini  smooth006.ini  smooth007.ini  smooth008.ini  smooth009.ini  smooth010.ini  smooth011.ini  smooth012.ini  smooth013.ini  smooth_clipping001.ini  sources.txt  specular_light_clipping006.ini  stochastic_grass.L2D  stochastic_grass.ini  stochastic_tree.L2D  stochastic_tree.ini  stochastic_walk.L2D  stochastic_walk.ini  wavefront001.ini  wavefront004.ini  wavefront006.ini  (+6 more)
assets/extreme/: cubemap009.ini  cubemap010.ini  wavefront002.ini  wavefront003.ini
include/: cgengine.h  cow.h  easy_image.h  engine.h  inline_vector.h  intro.h  l_parser.h  l_system.h  lines.h  obj_parser.h  point3d.h  shapes.h  util.h  vector3d.h  wireframe.h  zbuffer.h
include/math/: matrix2d.h  matrix4d.h  point2d.h  point3d.h  vector2d.h  vector3d.h  vector4d.h
include/render/: aabb.h  color.h  fragment.h  geometry.h  light.h  lines.h  rect.h  texture.h  triangle.h
include/shapes/: buckyball.h  circle.h  cone.h  cube.h  cylinder.h  dodecahedron.h  fractal.h  icosahedron.h  mengersponge.h  octahedron.h  sphere.h  tetrahedron.h  thicken.h  torus.h  wavefront.h
src/: cgengine.cpp  easy_image.cpp  engine.cpp  ini_configuration.cpp  intro.cpp  l_parser.cpp  l_system.cpp  lines.cpp  math.cpp  obj_parser.cpp  shapes.cpp  wireframe.cpp  zbuffer.cpp
src/math/: matrix4d.cpp  point2d.cpp  vector2d.cpp  vector3d.cpp  vector4d.cpp
src/render/: color.cpp  fragment.cpp  geometry.cpp  rect.cpp  triangle.cpp
src/render/fragment/: edges.cpp  faces.cpp
src/shapes/: buckyball.cpp  circle.cpp  cone.cpp  cube.cpp  cylinder.cpp  dodecahedron.cpp  fractal.cpp  icosahedron.cpp  mengersponge.cpp  octahedron.cpp  sphere.cpp  tetrahedron.cpp  thicken.cpp  torus.cpp  wavefront.cpp
